[package]
name = "pravda-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros" ] }
tokio = { version = "1", features = ["full"] }
pravda-protocol = { git = "https://github.com/Norne9/pravda-protocol.git" }
async-trait = "0.1"